--- a/.github/workflows/fullstack.yaml
+++ b/.github/workflows/fullstack.yaml
@@ -27,6 +27,6 @@ jobs:
 
     - name: Install npm
       id: fmt
-      run: pwd && cd codebase/rdicidr-0.1.0 && npm install
+      run: pwd && ls -lart && cd rdicidr-0.1.0 && npm install
       continue-on-error: true
       
