--- a/.github/workflows/fullstack.yaml
+++ b/.github/workflows/fullstack.yaml
@@ -29,6 +29,26 @@ jobs:
 
     - name: Install npm
       id: fmt
-      run: pwd && ls -lart && cd rdicidr-0.1.0 && npm install
+      run: cd rdicidr-0.1.0 && npm install
       continue-on-error: true
+
+    - name: npm lint
+      id: fmt
+      run: cd rdicidr-0.1.0 &&  npm run lint
+      continue-on-error: true
+
+       - name: npm prettier
+      id: fmt
+      run: cd rdicidr-0.1.0 && npm run prettier
+      continue-on-error: true
+
+      - name: npm Jest testcases
+      id: fmt
+      run: cd rdicidr-0.1.0 && CI=true && npm run test
+      continue-on-error: true
+
+      - name: npm build
+      id: fmt
+      run: cd rdicidr-0.1.0 && npm run build
+      continue-on-error: true                
       
